--- a/classic/01_sklearn_training.ipynb
+++ b/classic/01_sklearn_training.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,8 @@
     "from wordcloud import WordCloud\n",
     "import matplotlib.pyplot as plt\n",
     "import wandb\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix\n"
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix\n",
+    "import pickle\n"
    ]
   },
   {
@@ -1532,6 +1533,98 @@
    "source": [
     "### Run Link:\n",
     "https://wandb.ai/adarsh047/Disaster%20Tweet%20Classification?nw=nwuseradarsh047"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Choosing and Saving the best model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.79      0.92      0.85       869\n",
+      "           1       0.86      0.67      0.75       654\n",
+      "\n",
+      "    accuracy                           0.81      1523\n",
+      "   macro avg       0.82      0.79      0.80      1523\n",
+      "weighted avg       0.82      0.81      0.81      1523\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "print(classification_report(y_val, y_pred_cv))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.80      0.90      0.85       869\n",
+      "           1       0.84      0.70      0.77       654\n",
+      "\n",
+      "    accuracy                           0.82      1523\n",
+      "   macro avg       0.82      0.80      0.81      1523\n",
+      "weighted avg       0.82      0.82      0.81      1523\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_val, y_pred_tv))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### From the above results we can see that the `TFIDF` model is performing slightly better than the other models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's Save the model and the vectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"vectorizer.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(tfif_vectorizer, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"tfidf.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(svc_tfidf_tv, f)"
    ]
   }
  ],
